--- a/package.json
+++ b/package.json
@@ -1,14 +1,36 @@
 {
   "name": "webpacker-demo",
   "private": true,
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "@rails/webpacker": "^3.0.1",
-    "babel-preset-react": "^6.24.1",
+    "ignore-loader": "^0.1.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
+    "babel-jest": "^21.0.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "enzyme": "^2.9.1",
+    "jest": "^21.0.1",
+    "react-test-renderer": "^15.6.1",
     "webpack-dev-server": "^2.7.1"
+  },
+  "jest": {
+    "testPathDirs": [
+      "<rootDir>/app/javascript/packs"
+    ],
+    "moduleDirectories": [
+      "<rootDir>/node_modules"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ]
   }
 }
